--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,21 @@
-<%= text %>	
+<head>
+  <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="/css/bootstrap-responsive.css">
+</head>
+<div class="container text-center">
+  
+  <form class="w-100" method="POST" action="/get_data">
+    <div class="form-group " >
+      <label for="start_date">Start Date</label>
+      <input type="date" class="" id="start_date" placeholder="Date" name="start_date">
+    </div>
+    <div class="form-group">
+      <label for="end_date">End Date</label>
+      <input type="date" class="" id="end_date" placeholder="Date" name="end_date">
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+
+</div>
+
+<script type="text/javascript", src="/js/bootstrap.min.js"></script>
