--- a/views/index.erb
+++ b/views/index.erb
@@ -1,21 +1,18 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="/css/bootstrap-responsive.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<div class="container text-center">
-  
-  <form class="w-100" method="POST" action="/get_data">
-    <div class="form-group " >
-      <label for="start_date">Start Date</label>
-      <input type="date" class="" id="start_date" placeholder="Date" name="start_date">
+<div class="align-items-center d-flex h-100 justify-content-center">
+  <form method="POST" action="/get_data">
+    <div class="d-flex flex-column">
+      <div class="d-flex flex-column mb-4">
+        <label for="start_date">Data de início da pesquisa</label>
+        <input type="date" class="mt-2 form-control" id="start_date" name="start_date">
+      </div>
+      <div class="d-flex flex-column mb-4">
+        <label for="end_date">Data de fim da pesquisa</label>
+        <input type="date" class="mt-2 form-control" id="end_date" name="end_date">
+      </div>
+      <button type="submit" class="btn btn-primary">Pesquisar</button>
     </div>
-    <div class="form-group">
-      <label for="end_date">End Date</label>
-      <input type="date" class="" id="end_date" placeholder="Date" name="end_date">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
-
 </div>
-
-<script type="text/javascript", src="/js/bootstrap.min.js"></script>
