added demo links and basic info, adjusted typo in results.erb

--- a/views/results.erb
+++ b/views/results.erb
@@ -5,7 +5,10 @@
 </head>
 <body class="text-center">
 	<div class="container">
-		<h1>Analise por Taca de Clicks</h1>
+		<h1>Analise por Taxa de Clicks</h1>
+
+		<button type="submit" class="btn btn-primary" onclick="window.print();return false;">Imprimir</button>
+
 		<table class="table table-bordered">
 			<tr>
 				<th>Emails Analisados</th>
