--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <head>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<div class="align-items-center d-flex h-100 justify-content-center">
+<div class="container align-items-center d-flex h-100 justify-content-center">
   <form method="POST" action="/get_data">
     <div class="d-flex flex-column">
       <div class="d-flex flex-column mb-4">
@@ -12,7 +12,20 @@
         <label for="end_date">Data de fim da pesquisa</label>
         <input type="date" class="mt-2 form-control" id="end_date" name="end_date">
       </div>
+      <div class="d-flex flex-column mb-4">
+        <label for="key">Chave da métrica a ser analisada</label>
+        <input type="text" class="mt-2 form-control" id="key" name="key">
+      </div>
+      <input type="text" style="display:none;" id="token" name="token" value=<%= token %> >
       <button type="submit" class="btn btn-primary">Pesquisar</button>
     </div>
   </form>
+  <div class="align-items-center d-flex justify-content-center mx-5">
+    <ol>
+        <li> email_delivered_rate</li>
+        <li> email_opened_rate</li>
+        <li> email_clicked_rate</li>
+        <li> email_spam_reported_rate</li>
+    </ol>
+  </div>
 </div>
