adjusted code for demo ready, added secrets control to use access_token

--- a/views/results.erb
+++ b/views/results.erb
@@ -45,20 +45,20 @@
 						<th>Spam Reported Rate</th>
 					</tr>
 					<tr>
-						<td><%= text[0][:melhor_rate][:campaign_name] %></td>
-						<td><%= text[0][:melhor_rate][:send_at] %></td>
-						<td><%= text[0][:melhor_rate][:contacts_count] %></td>
-						<td><%= text[0][:melhor_rate][:email_delivered_count] %></td>	
-						<td><%= text[0][:melhor_rate][:email_dropped_count] %></td>
-						<td><%= text[0][:melhor_rate][:email_bounced_unique_count] %></td>
-						<td><%= text[0][:melhor_rate][:email_opened_unique_count] %></td>
-						<td><%= text[0][:melhor_rate][:email_clicked_unique_count] %></td>
-						<td><%= text[0][:melhor_rate][:email_unsubscribed_count] %></td>
-						<td><%= text[0][:melhor_rate][:email_spam_reported_count] %></td>
-						<td><%= text[0][:melhor_rate][:email_delivered_rate].round(2) %></td>
-						<td><%= text[0][:melhor_rate][:email_opened_rate].round(2) %></td>
-						<td><%= text[0][:melhor_rate][:email_clicked_rate].round(2) %></td>
-						<td><%= text[0][:melhor_rate][:email_spam_reported_rate].round(2) %></td>
+						<td><%= text[0][:melhor_rate]["campaign_name"] %></td>
+						<td><%= text[0][:melhor_rate]["send_at"] %></td>
+						<td><%= text[0][:melhor_rate]["contacts_count"] %></td>
+						<td><%= text[0][:melhor_rate]["email_delivered_count"] %></td>	
+						<td><%= text[0][:melhor_rate]["email_dropped_count"] %></td>
+						<td><%= text[0][:melhor_rate]["email_bounced_count"] %></td>
+						<td><%= text[0][:melhor_rate]["email_opened_count"] %></td>
+						<td><%= text[0][:melhor_rate]["email_clicked_count"] %></td>
+						<td><%= text[0][:melhor_rate]["email_unsubscribed_count"] %></td>
+						<td><%= text[0][:melhor_rate]["email_spam_reported_count"] %></td>
+						<td><%= text[0][:melhor_rate]["email_delivered_rate"].round(2) %></td>
+						<td><%= text[0][:melhor_rate]["email_opened_rate"].round(2) %></td>
+						<td><%= text[0][:melhor_rate]["email_clicked_rate"].round(2) %></td>
+						<td><%= text[0][:melhor_rate]["email_spam_reported_rate"].round(2) %></td>
 					</tr>
 				</table>
 			</div>
@@ -83,20 +83,20 @@
 						<th>Spam Reported Rate</th>
 					</tr>
 					<tr>
-						<td><%= text[0][:pior_rate][:campaign_name] %></td>
-						<td><%= text[0][:pior_rate][:send_at] %></td>
-						<td><%= text[0][:pior_rate][:contacts_count] %></td>
-						<td><%= text[0][:pior_rate][:email_delivered_count] %></td>	
-						<td><%= text[0][:pior_rate][:email_dropped_count] %></td>
-						<td><%= text[0][:pior_rate][:email_bounced_unique_count] %></td>
-						<td><%= text[0][:pior_rate][:email_opened_unique_count] %></td>
-						<td><%= text[0][:pior_rate][:email_clicked_unique_count] %></td>
-						<td><%= text[0][:pior_rate][:email_unsubscribed_count] %></td>
-						<td><%= text[0][:pior_rate][:email_spam_reported_count] %></td>
-						<td><%= text[0][:pior_rate][:email_delivered_rate].round(2) %></td>
-						<td><%= text[0][:pior_rate][:email_opened_rate].round(2) %></td>
-						<td><%= text[0][:pior_rate][:email_clicked_rate].round(2) %></td>
-						<td><%= text[0][:pior_rate][:email_spam_reported_rate].round(2) %></td>
+						<td><%= text[0][:pior_rate]["campaign_name"] %></td>
+						<td><%= text[0][:pior_rate]["send_at"] %></td>
+						<td><%= text[0][:pior_rate]["contacts_count"] %></td>
+						<td><%= text[0][:pior_rate]["email_delivered_count"] %></td>	
+						<td><%= text[0][:pior_rate]["email_dropped_count"] %></td>
+						<td><%= text[0][:pior_rate]["email_bounced_count"] %></td>
+						<td><%= text[0][:pior_rate]["email_opened_count"] %></td>
+						<td><%= text[0][:pior_rate]["email_clicked_count"] %></td>
+						<td><%= text[0][:pior_rate]["email_unsubscribed_count"] %></td>
+						<td><%= text[0][:pior_rate]["email_spam_reported_count"] %></td>
+						<td><%= text[0][:pior_rate]["email_delivered_rate"].round(2) %></td>
+						<td><%= text[0][:pior_rate]["email_opened_rate"].round(2) %></td>
+						<td><%= text[0][:pior_rate]["email_clicked_rate"].round(2) %></td>
+						<td><%= text[0][:pior_rate]["email_spam_reported_rate"].round(2) %></td>
 					</tr>
 				</table>
 			</div>		
